init UseCase